@@ -67,7 +67,7 @@ module Fairy
 
       mod = CONF.HASH_MODULE
       require mod
-      @hash_seed = Fairy::HashGenerator.create_seed
+      @hash_seed = Fairy::HValueGenerator.create_seed
     end
 
     attr_reader :id
